# chatbot

./: Dockerfile  README.md  generator.py  index.py  main.py  pyproject.toml  retriever.py
data/: Analysing_honeybees_division_of_labour_i.md  README_bio_project.md  Tennis_Player_and_Ball_Analysis.md  report_bio_project.md
faiss_index/: index.faiss  index.pkl
